--- a/WP2020_assign1/report#1.html
+++ b/WP2020_assign1/report#1.html
@@ -10,16 +10,16 @@
     <link rel="stylesheet" type="text/css" href="my-style.css">
   </head>
   <body>
-    <table style="width: 100%" class="table table-sm table-striped">
+    <table class="table table-sm table-striped table-fixed">
       <thead class="table-head">
         <tr>
-          <th style="width: 10%">Line NO.</th>
+          <th style="width: 9%">Line NO.</th>
           <th style="width: 10%">Date</th>
-          <th style="width: 16%; text-align:center;">NAVER</th>
-          <th style="width: 16%; text-align:center;">SK하이닉스</th>
-          <th style="width: 16%; text-align:center;">삼성에스디에스</th>
-          <th style="width: 16%; text-align:center;">카카오</th>
-          <th style="width: 16%; text-align:center;">현대모비스</th>
+          <th style="width: 15.5%; text-align:center;">NAVER</th>
+          <th style="width: 15.5%; text-align:center;">SK하이닉스</th>
+          <th style="width: 15.5%; text-align:center;">삼성에스디에스</th>
+          <th style="width: 15.5%; text-align:center;">카카오</th>
+          <th style="width: 15.5%; text-align:center;;">현대모비스</th>
         </tr>
       </thead>
       <tbody class="table-body" id="tbody"></tbody>
